--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-scripts": "4.0.3",
+    "sass-loader": "^12.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
